@@ -1,8 +1,12 @@
 # ChangeLog for Gentoo Linux Installer
 # Copyright 2004 Gentoo Technologies, Inc.
-# $Header: /var/cvsroot/gentoo/src/installer/ChangeLog,v 1.104 2005/03/25 05:30:28 agaffney Exp $
+# $Header: /var/cvsroot/gentoo/src/installer/ChangeLog,v 1.105 2005/03/25 06:32:53 agaffney Exp $
 
 *GLI-0.01 (9 Feb 2004)
+
+  24 Mar 2005; Andrew Gaffney <agaffney@gentoo.org>
+  GRP-ish quickpkg code pulls PKGDIR and PORTAGE_TMPDIR from make.conf info in
+  the install profile if available.
 
   23 Mar 2005; Preston Cody <codeman@gentoo.org>
   small changes to setup_network_post. moved adding to runlevel of net.x to
